Bug 404396 - Page titles are no longer the same size as a level 1 Heading
Summary: Page titles are no longer the same size as a level 1 Heading
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.55.0
Platform: Other Linux
: NOR normal
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords: regression
: 417855 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-02-15 15:53 UTC by Filip Fila
Modified: 2020-08-09 17:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.74
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Fila 2019-02-15 15:53:28 UTC
SUMMARY
After updating to Plasma 5.15 some KCM header titles are smaller than others. 

STEPS TO REPRODUCE
1. Update to Plasma 5.15
2. Compare e.g. Plasma Theme KCM and the Widget Style KCM

OBSERVED RESULT
https://i.ibb.co/mqK55zv/Screenshot-20190215-165024.png

EXPECTED RESULT
Headers have the same font size.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 5.15.0
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 1 Neousr 2019-02-17 17:15:47 UTC
I'm able to confirm this on Neon 5.15.0 User Edition.

KDE Frameworks 5.55.0.
Qt Version: 5.12.0
Comment 2 Nate Graham 2019-10-27 16:58:04 UTC
Looks like the QML KCMs have smaller titles. Seems like a regression somewhere in Kirigami page header title handling. Possibly https://cgit.kde.org/kirigami.git/commit/?id=8bf21953d717b4aba0533b620a4accff887208d2. Investigating...
Comment 3 Nate Graham 2019-10-27 18:32:56 UTC
It seems that the title isn't actually being rendered as a Kirigami Heading, which is presumably why it doesn't match the Heading sizes.
Comment 4 Nate Graham 2019-10-27 18:33:40 UTC
Possibly related to another QML page header regression: Bug 410673.
Comment 5 Marco Martin 2019-10-29 16:58:15 UTC
Git commit 87a9ee123346a2bd7851745fb6ea8b899ef7ce5c by Marco Martin.
Committed on 29/10/2019 at 16:58.
Pushed by mart into branch 'master'.

don't use a custom header height

M  +0    -1    src/kcmoduleqml.cpp

https://commits.kde.org/kcmutils/87a9ee123346a2bd7851745fb6ea8b899ef7ce5c
Comment 6 Nate Graham 2019-10-29 17:05:32 UTC
That commit doesn't fix the issue for me, sorry. :(
Comment 7 Filip Fila 2020-03-06 16:05:33 UTC
Headings in QML KCMs still seem slightly smaller than in QWidgets one, although the difference doesn't seem to be as profound as it was before.
Comment 8 Nate Graham 2020-04-24 18:22:39 UTC
I can reproduce on openSUSE Tumbleweed now.
Comment 9 Nate Graham 2020-04-24 18:23:11 UTC
*** Bug 417855 has been marked as a duplicate of this bug. ***
Comment 10 Ismael Asensio 2020-08-09 17:39:36 UTC
Git commit d325918b33be406930425cdfa49208be6b6f06e7 by Ismael Asensio.
Committed on 09/08/2020 at 12:35.
Pushed by iasensio into branch 'master'.

Do not override Heading pixel size in BreadCrumbControl

This fixes the inconsistency found in title sizes between QML KCMs and
QWidget KCMs.

Both KCM titles use the same logic to calculate the title font.pointSize
depending on the heading level:
- `Heading.qml:headerPointSize()` in Kirigami
- `ktitlewidget.cpp:textStyleSheet()` in KConfigWidgets

But setting externally the `Heading.pixelSize` depending on height was
overriding this calculation.
FIXED-IN: 5.74
MR: https://invent.kde.org/frameworks/kirigami/-/merge_requests/73

M  +0    -2    src/controls/private/globaltoolbar/BreadcrumbControl.qml

https://invent.kde.org/frameworks/kirigami/commit/d325918b33be406930425cdfa49208be6b6f06e7