don't use a custom header height

BUG:404396